--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,18 @@ code {
   animation-duration: 1.35;
   transition-timing-function: ease-in-out;
 }
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.slideDown {
+  animation-name: slideDown;
+  animation-duration: 1s;
+  transition-timing-function: ease-in-out;
+}
